fix(table-compare): tooltip alignment/spacing

--- a/src/js/components/organisms/table-compare/table-compare.scss
+++ b/src/js/components/organisms/table-compare/table-compare.scss
@@ -4,6 +4,7 @@
 
 .table-compare__scroll-container {
     overflow: auto;
+    overflow-y: visible;
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: x mandatory;
 }
@@ -118,19 +119,26 @@
     display: inline-block;
     position: relative;
     vertical-align: top;
-    padding: 16px 50px 10px 0;
+    padding: 13px 50px 10px 0;
     background: linear-gradient(to left, transparentize($colorWhite, 1), $colorWhite $buildingUnit);
 
     main .organism:nth-child(even) & {
         background: linear-gradient(to left, transparentize($colorBgGray, 1), $colorBgGray $buildingUnit);
     }
+
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 125px;
+    max-width: 70vw;
 }
 
 .table-compare__tooltip {
     margin-left: -50px;
 
     .tooltip {
-        width: 150px;
+        width: 200px;
+        max-width: 200px;
     }
 }
 
